# cpp_qt_fast_ui

./: .gitignore  README.md  design.eddx
qt_cpp_advanced_ui/: CMakeLists.txt  CMakeLists.txt.user.2673a5d  CMakeLists.txt.user.9c59ddb  audio_item.cpp  audio_item.h  avatar.cpp  avatar.h  circle_button.cpp  circle_button.h  content_page.cpp  content_page.h  layout_helper.h  main.cpp  mainwindow.cpp  mainwindow.h  mediaplayer.cpp  mediaplayer.h  play_controller.cpp  play_controller.h  res.qrc  rotate_cover.cpp  rotate_cover.h  settings.cpp  settings.h  side_bar.cpp  side_bar.cpp.autosave  side_bar.h  slider.cpp  slider.h  title_bar.cpp  title_bar.h  volume_controller.cpp  volume_controller.h
